[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truc-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "netifaces2>=0.0.22",
    "psutil>=7.1.0",
    "pytest>=8.4.2",
    "scapy>=2.6.1",
]

[project.scripts]
ttk = "ttk.cli:cli"

[tool.setuptools.packages.find]
include = ["ttk*"]
exclude = ["Resources*", "tests*"]

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
